--- a/WebBlog/.settings/org.eclipse.wst.common.component
+++ b/WebBlog/.settings/org.eclipse.wst.common.component
@@ -5,6 +5,6 @@
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <property name="java-output-path" value="/MVC1/target/classes"/>
-        <property name="context-root" value="WebBlog"/>
+        <property name="context-root" value="Web_Blog"/>
     </wb-module>
 </project-modules>
